<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_GHTHashTableBuffer" Id="{d2a6392a-7373-4ce2-a65a-d7cb13d716ac}">
    <Declaration><![CDATA[TYPE T_GHTHashTableBuffer :
STRUCT
	aBuffer: ARRAY[0..(50 - 1)] OF POINTER TO T_HashTableEntry;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>